--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "5.3.4",
     "react-router-dom": "^6.21.2",
-    "reactjs-popup": "2.0.5"
+    "react-toastify": "9.1.2",
+    "reactjs-popup": "2.0.5",
+    "tailwindcss-gradients": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
